--- a/recipe_style.css
+++ b/recipe_style.css
@@ -1,6 +1,18 @@
+* {
+    margin: 0px;
+    padding: 0px;
+}
 
+.container { 
+    display: flex;
+    flex-direction: column;
+}
 
-
+.responsive {
+    width: 100%;
+    max-width: 600px;
+    height: auto;
+}
 
 ol {
     list-style-type: none;
