--- a/recipes/recipe_style.css
+++ b/recipes/recipe_style.css
@@ -1,11 +1,19 @@
 header {
-    text-align: justify;
-    
+    text-align: center;
+    max-width: 200px;
+}
+
+header a {
+    text-decoration: none;
+}
+
+header a:hover {
+    color: #8FB365;
 }
 
 h1 {
     text-align: center;
-    text-shadow: 1px 1px 2px rgba(0,0,0,0.5);
+    text-shadow: 1px 1px 1px rgba(0,0,0,0.5);
     font-weight: bold;
 }
 
